Little bit of cleanup + fix the blocktags issue
Signed-off-by: TheCricket <bcord@me.com>